[package]
name = "program_protected_compile"
version = "0.0.0"
authors = ["John Marsden <johnswork15@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = {version = "1.0", features = ["full"] }

