[package]
name = "compile_protection"
version = "0.0.0"
authors = ["John Marsden <johnswork15@gmail.com>"]
description = "Don't use this"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = {version = "1.0", features = ["full"] }